# fastapi-keycloak

./: pyproject.toml
fastapi_keycloak/: api.py
