[tool.poetry]
name = "fastapi-keycloak"
version = "0.1.0"
description = ""
authors = ["MJChimal <mjchimal@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
asgiref = "^3.7.2"
charset-normalizer = "^3.3.2"
click = "^8.1.7"
h11 = "^0.14.0"
idna = "^3.4"
pyasn1 = "^0.5.0"
python-jose = "^3.3.0"
requests = "^2.31.0"
rsa = "^4.9"
six = "^1.16.0"
sniffio = "^1.3.0"
typing-extensions = "^4.8.0"
urllib3 = "^2.1.0"
uvicorn = "^0.24.0.post1"
itsdangerous = "^2.1.2"
fastapi = "^0.104.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
